# CRM

./: .gitignore  Dockerfile  Makefile  TODO  docker-compose.yaml  pyproject.toml
apps/: serializers.py  urls.py  utils.py
apps/admin/: __init__.py  admin.py  base_admin.py
apps/migrations/: 0001_initial.py  0002_alter_attendance_id_alter_category_id_and_more.py  0003_alter_attendance_id_alter_category_id_and_more.py
apps/models/: __init__.py  attendance.py  base.py  courses.py  history.py  managers.py  organizations.py  payments.py  users.py
apps/services/: __init__.py  enrollment_service.py
apps/view/: __init__.py  auth.py  catalog.py  enrollment.py  payment.py  profile.py  views.py
env/: .env.exampple  .env.prod
locale/en/LC_MESSAGES/: django.po
locale/uz/LC_MESSAGES/: django.mo  django.po
root/: settings.py  urls.py
